--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,13 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+@import url('https://css.gg/home.css');
 
 * {
     margin: 0;
     padding: 0;
     text-decoration: none;
+    list-style-type: none;
+    font-family: 'Poppins', sans-serif;
 }
 
+/*
+ * Main content 
+ */
 body {
-    background-color: #181818;
+    background-image: url("../images/background-image.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #centered-container {
@@ -16,13 +24,47 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 
-    font-family: 'Poppins', sans-serif;
     text-align: center;
     color: #fff;
 }
 #centered-container h1 {
-    font-size: 2.5vw;
+    font-size: 3vw;
 }
 #centered-container p {
-    font-size: 1vw;
+    font-size: 1.5vw;
+}
+
+/*
+ * Sidebar 
+ */
+#sidebar-menu {
+    width: 5vw;
+    height: 100vh;
+    padding: 0% 1%;
+    
+    background-color: #181818;
+    color: #fff;
+}
+#sidebar-menu ul {
+    width: 100%;
+    height: 100%;
+}
+#sidebar-menu ul > li {
+    width: 100%;
+    height: 5%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    font-weight: bold;
+}
+
+/*
+ * Global
+ */
+.Text-soft {
+    color: #fff;
+    font-weight: bold;
+    opacity: .5;
 }
