--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,20 +4,31 @@
 * {
     margin: 0;
     padding: 0;
+    max-width: 100vw;
+
+    overflow: hidden;
+    scroll-behavior: smooth;
     text-decoration: none;
     list-style-type: none;
+
     font-family: 'Poppins', sans-serif;
+    color: #fff;
 }
 
 /*
  * Main content 
  */
-body {
+.screen {
+    width: 100vw;
+    height: 100vh;
+    padding-left: 7vw;
+}
+
+#home-screen {
     background-image: url("../images/background-image.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
-
 #centered-container {
     position: absolute;
     top: 50%;
@@ -34,13 +45,18 @@ body {
     font-size: 1.5vw;
 }
 
+#about-screen {
+    background-color: purple;
+}
+
 /*
  * Sidebar 
  */
 #sidebar-menu {
     width: 5vw;
     height: 100vh;
-    padding: 0% 1%;
+    padding: 0 1vw;
+    position: fixed;
     
     background-color: #181818;
     color: #fff;
@@ -57,14 +73,19 @@ body {
     flex-direction: column;
     justify-content: center;
 
+    font-size: 1vw;
     font-weight: bold;
 }
 
 /*
  * Global
  */
-.Text-soft {
+.text-soft {
     color: #fff;
     font-weight: bold;
     opacity: .5;
+}
+
+.active a {
+    color: aquamarine;
 }
