--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,6 +10,7 @@
     scroll-behavior: smooth;
     text-decoration: none;
     list-style-type: none;
+    overflow-wrap: break-word;
 
     font-family: 'Poppins', sans-serif;
     color: #fff;
@@ -19,23 +20,33 @@
  * Main content 
  */
 .screen {
-    width: 100vw;
-    height: 100vh;
     padding-left: 7vw;
 }
 
 #home-screen {
+    width: 100vw;
+    height: 100vh;
+}
+.fixed-background {
+    width: 100vw;
+    height: 100vh;
+
     background-image: url("../images/background-image.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+
+    position: fixed;
+    z-index: -1;
 }
 #centered-container {
     position: absolute;
+
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
     text-align: center;
+    pointer-events: none;
     color: #fff;
 }
 #centered-container h1 {
@@ -46,7 +57,39 @@
 }
 
 #about-screen {
-    background-color: purple;
+    width: 40%;
+    height: 100vh;
+    background: linear-gradient(135deg,#1d1e21 0,#3e4246 100%);
+}
+
+#hobbies-screen {
+    width: 100%;
+    height: 70vh;
+    margin-top: 30vh;
+
+    display: flex;
+    flex-direction: column;
+    
+    background: linear-gradient(135deg,#1d1e21 0%, #3e4246 100%);
+}
+#hobbies-grid {
+    width: 100%;
+    margin-top: 5vh;
+
+    display: grid;
+    justify-content: space-around;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 20vw));
+    grid-gap: 1vw;
+}
+.grid-element {
+    height: 20vh;
+}
+.grid-element div {
+    height: 60%;
+}
+.grid-element h1 {
+    font-size: 100%;
+    text-align: center;
 }
 
 /*
@@ -56,7 +99,9 @@
     width: 5vw;
     height: 100vh;
     padding: 0 1vw;
+
     position: fixed;
+    z-index: 999;
     
     background-color: #181818;
     color: #fff;
@@ -86,6 +131,44 @@
     opacity: .5;
 }
 
-.active a {
+.active {
     color: aquamarine;
+}
+
+.ghost-text {
+    margin-left: 4vw;
+    font-size: 4vw;
+    line-height: 120px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 900;
+    letter-spacing: .04em;
+    white-space: nowrap;
+    opacity: .2;
+}
+
+/*
+ * Medoa
+ */
+@media screen and (min-width: 445px) {
+    #hobbies-screen {
+        height: 40vh;
+        margin-top: 60vh;
+    }
+}
+
+/*
+ * Icon
+ */
+.sports-icon {
+    background: url('https://api.iconify.design/ic/outline-sports-soccer.svg?color=white') no-repeat center center / contain;
+}
+.games-icon {
+    background: url('https://api.iconify.design/dashicons/games.svg?color=white') no-repeat center center / contain;
+}
+.moutain-icon {
+    background: url('https://api.iconify.design/maki/mountain.svg?color=white') no-repeat center center / contain;
+}
+.tech-icon {
+    background: url('https://api.iconify.design/clarity/internet-of-things-line.svg?color=white') no-repeat center center / contain;
 }
